--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                     <img src="src/images/maye_baby.jpg" alt="Drake Maye">
                 </div>
                 <div class="gallery-item">
+                    <img src="src/images/GONZOTD.jpg" alt="GONZOTD">
+                </div>
+                <div class="gallery-item">
                     <img src="src/images/Kendrick bourne.jpg" alt="Kendrick Bourne">
                 </div>
                 <div class="gallery-item">
