--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <img src="src/images/IMG_5557.jpg.jpeg" alt="Your Image" class="right-image-custom">
             </div>
             <br/>
-            <p class="p2">Created just a month ago on October 25th (’24), the account has found great success. With many hours outside of designing spent on outreach, it has experienced numerous successful collaborations with accounts whose followings span in the tens of thousands. The quality of design and outreach has resulted in 7,500 profile views, and it continues to rise as I maintain this trend.</p>
+            <p class="p2">Created on October 25th (’24), the account has found great success. With many hours outside of designing spent on outreach, it has experienced numerous successful collaborations with accounts whose followings span in the tens of thousands. The quality of design and outreach has resulted in 7,500 profile views, and it continues to rise as I maintain this trend.</p>
             <br/>
             <br/>
             <h3>Football Graphics</h3>
