--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                     <img src="src/images/Another Drake Maye.jpg" alt="Placeholder 2"> <!-- Example Placeholder -->
                 </div>
                 <div class="gallery-item">
+                    <img src="src/images/HAPPY THANKSGIVING.png" alt="Placeholder 2"> <!-- Example Placeholder -->
+                </div>
+                <div class="gallery-item">
                     <img src="src/images/kayshon boutte.png" alt="Placeholder 1"> <!-- Example Placeholder -->
                 </div>
                 <div class="gallery-item">
