gameday vs colts graphic

--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
         <img src="src/images/GAMEDAY.jpg" alt="Basketball Image 1">
     </div>
     <div class="gallery-new-item">
+        <img src="src/images/Gameday vs.jpg" alt="Basketball Image 2">
+    </div>
+    <div class="gallery-new-item">
         <img src="src/images/GAMEDAY wk12.jpg" alt="Basketball Image 2">
     </div>
     <div class="gallery-new-item">
