another phone integration

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             /* For screens smaller than 768px (phones, tablets) */
             @media only screen and (max-width: 768px) {
                 body {
+                    background-image: url("src/images/phone\ website\ background.png");
                     background-size: cover; /* Ensures the image still covers the screen */
                     background-position: top center; /* Adjusts the position to avoid cutting important parts */
                 }
