--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                     <img src="src/images/GONZOTD.jpg" alt="Drake Maye">
                 </div>
                 <div class="gallery-item">
+                    <img src="src/images/Antonio.jpg" alt="Drake Maye">
+                </div>
+                <div class="gallery-item">
                     <img src="src/images/Kendrick bourne.jpg" alt="Kendrick Bourne">
                 </div>
                 <div class="gallery-item">
@@ -152,9 +155,7 @@
     <div class="gallery-new-item">
         <img src="src/images/GAMEDAY wk12.jpg" alt="Basketball Image 2">
     </div>
-    <div class="gallery-new-item">
-        <img src="src/images/FINAL.jpg" alt="Basketball Image 3">
-    </div>
+    
     
 </div>
 
