--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <img src="src/images/CHRISTIAN_GONZALEZ_IS_A.jpg" alt="Christian Gonzalez">
                 </div>
                 <div class="gallery-item">
-                    <img src="src/images/maye_baby.jpg" alt="Drake Maye">
+                    <img src="src/images/Antonio Gibson graphic for usgroup.gif" alt="Drake Maye">
                 </div>
                 <div class="gallery-item">
                     <img src="src/images/GONZOTD.jpg" alt="Drake Maye">
