--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                     <img src="src/images/Another Drake Maye.jpg" alt="Placeholder 2"> <!-- Example Placeholder -->
                 </div>
                 <div class="gallery-item">
+                    <img src="src/images/Alex Austin.jpg" alt="Placeholder 2"> <!-- Example Placeholder -->
+                </div>
+                <div class="gallery-item">
                     <img src="src/images/HAPPY THANKSGIVING.png" alt="Placeholder 2"> <!-- Example Placeholder -->
                 </div>
                 <div class="gallery-item">
