--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
             <div class="parallax-gallery-2">
                 <div class="parallax-gallery-2-item"><img src="src/images/Jalynn Polk.png" alt="Gallery Image 2"></div>
                 <div class="parallax-gallery-2-item"><img src="src/images/DELL PETTUS.jpg" alt="Gallery Image 1"></div>
-                <div class="parallax-gallery-2-item"><img src="src/images/HE’S BACK.png" alt="Gallery Image 2"></div>
+                <div class="parallax-gallery-2-item"><img src="src/images/deatrich.png" alt="Gallery Image 2"></div>
                 <div class="parallax-gallery-2-item"><img src="src/images/KB TD.jpg" alt="Gallery Image 3"></div>
+                <div class="parallax-gallery-2-item"><img src="src/images/HE’S BACK.png" alt="Gallery Image 2"></div>
                 <div class="parallax-gallery-2-item"><img src="src/images/Austin Hooper.jpg" alt="Gallery Image 3"></div>
                 <div class="parallax-gallery-2-item"><img src="src/images/MLFB DM.jpg" alt="Gallery Image 3"></div>
                 <!-- Add more items as needed -->
