--- a/index.html
+++ b/index.html
@@ -208,6 +208,19 @@
                 </div>
             </div>
             
+            <!-- Showcase Gallery Section -->
+            <div class="gallery-showcase">
+                <div class="gallery-showcase-item">
+                    <img src="src/images/Joe Milton Collection/JM1.jpg" alt="Showcase Collection Image 1">
+                </div>
+                <div class="gallery-showcase-item">
+                    <img src="src/images/Joe Milton Collection/JM2.jpg" alt="Showcase Collection Image 2">
+                </div>
+                <div class="gallery-showcase-item">
+                    <img src="src/images/Joe Milton Collection/JM3.jpg" alt="Showcase Collection Image 3">
+                </div>
+            </div>
+
         </section>
         <br/>
         <br/>
