--- a/index.html
+++ b/index.html
@@ -251,6 +251,22 @@
                 </div>
             </div>
         </section>
+
+        <section class="misc-gal">
+            <h2>Miscellaneous Poster Designs</h2>
+            <div class="gallery">
+              <div class="gallery-item">
+                <img src="src/images/A Wish 3.png" alt="Miscellaneous Design 1">
+              </div>
+              <div class="gallery-item">
+                <img src="src/images/Edelman Poster.jpg" alt="Miscellaneous Design 2">
+              </div>
+              <div class="gallery-item">
+                <img src="src/images/Gonzo Poster.png" alt="Miscellaneous Design 3">
+              </div>
+            </div>
+          </section>
+
         <style>
 
 
