--- a/index.html
+++ b/index.html
@@ -264,6 +264,9 @@
               <div class="gallery-item">
                 <img src="src/images/Gonzo Poster.png" alt="Miscellaneous Design 3">
               </div>
+              <div class="gallery-item">
+                <img src="src/images/THE DON.png" alt="Miscellaneous Design 4">
+              </div>
             </div>
           </section>
 
