reorganizing new poster

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
         <section class="misc-gal">
             <h2> Miscellaneous Poster Designs</h2>
-            <div class="gallery">
+            <div class="misc-gallery">
               <div class="gallery-item">
                 <img src="src/images/A Wish 3.png" alt="Miscellaneous Design 1">
               </div>
@@ -264,9 +264,7 @@
               <div class="gallery-item">
                 <img src="src/images/Gonzo Poster.png" alt="Miscellaneous Design 3">
               </div>
-              <div class="gallery-item">
-                <img src="src/images/THE DON.png" alt="Miscellaneous Design 4">
-              </div>
+              
             </div>
           </section>
 
