mlfootall addition may be horrible cmd undo potetiakl

--- a/index.html
+++ b/index.html
@@ -224,6 +224,31 @@
         </section>
         <br/>
         <br/>
+        <section id="mlfootball-work">
+            <h2>My Work With MLFootball</h2>
+            <p class="gallery-description">[Your description here]</p>
+            <div class="gallery mlfootball-gallery">
+                <div class="gallery-item">
+                    <img src="src/images/ML post stats 3.png" alt="MLFootball Work 1">
+                    <p>Caption for Work 1</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="src/images/ML post stats 4.png" alt="MLFootball Work 2">
+                    <p>Caption for Work 2</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="src/images/ML post stats 1.png" alt="MLFootball Work 3">
+                    <p>Caption for Work 3</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="src/images/ML post stats 2.png" alt="MLFootball Work 2">
+                    <p>Caption for Work 2</p>
+                </div>
+                <!-- Add more items as needed -->
+            </div>
+        </section>
+        <br/>
+        <br/>
         <section class="new-gallery">
             <h2>Campus Design & Copy</h2>
             <p class="p2">Campus Design & Copy is a student-run organization at UMass Amherst that focuses on printing and creating designs for campus departments, clubs, and other organizations. As a co-manager heading marketing, I recently designed eye-catching flyers that promote our services as part of a marketing campaign. The visuals were aimed to resonate with students, along with highlighting our ability to help club-advertising.</p>
