--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <div class="intro-text">
               
               <h1 class="hide">
-                <span class="text">Welcome.</span>
+                <span class="text">Ido's Design Portfolio</span>
               </h1>
             </div>
           </div>
