--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <br/>
         <section id="mlfootball-work">
             <h2>My Work With MLFootball</h2>
-            <p class="gallery-description">MLfootball is a verified football news reporting account. I created several designs for them, contributing to a total of over 1.5 million views on their content. The designs featured above were part of this successful collaboration, with the statistics listed below.</p>
+            <p class="gallery-description">MLfootball is a twitter-verified football news reporting company. I work for them as a remote design intern, contributing to several millions of views on their content. The designs featured above were only a few of this successful collaboration, with the statistics listed below.</p>
             <div class="gallery mlfootball-gallery">
                 <div class="gallery-item">
                     <img src="src/images/ML post stats 3.png" alt="MLFootball Work 1">
