--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     
                 </div>
                 <div class="gallery-item">
-                    <img src="src/images/600k.png" alt="MLFootball Work 2">
+                    <img src="src/images/eli trade.png" alt="MLFootball Work 2">
                     
                 </div>
                 <div class="gallery-item">
